# rsl-interpolation

./: .gitignore  Cargo.toml  README.md  TODO.md  tarpaulin.toml
benches/: accelerator.rs  cache.rs  dynamic.rs  evaluations.rs  evaluations2d.rs
src/: accel.rs  error.rs  interp.rs  interp2d.rs  interp_types.rs  lib.rs  spline.rs  spline2d.rs
src/gsl_tests/: mod.rs  test_accel.rs  test_akima.rs  test_cubic.rs  test_cubic_periodic.rs  test_linear.rs  test_steffen.rs
src/tests/: Makefile  README.md  bilinear_plot.sh  gsl_bilinear.c  gsl_steffen.c  mod.rs  test_akima.rs  test_akima_periodic.rs  test_bicubic.rs  test_bilinear.rs  test_cache_accel_sync.rs  test_cubic.rs  test_cubic_periodic.rs  test_linear.rs  test_steffen.rs
src/tests/c_gsl_tests/: Makefile  bicubic_plot.sh  bilinear_plot.sh  gsl_akima_periodic.c  gsl_bicubic.c
src/types/: akima.rs  bicubic.rs  bilinear.rs  cache.rs  cubic.rs  dyn_interpolation.rs  dynamic1d.rs  dynamic2d.rs  linear.rs  mod.rs  steffen.rs  utils.rs
