[package]
name = "rsl-interpolation"
authors = ["George Tsiamasiotis"]
version = "0.1.9-pre.5"
edition = "2024"
keywords = ["math", "science", "interpolation"]
readme = "README.md"
license = "GPL-3.0-only"
documentation = "https://docs.rs/rsl-interpolation/latest/rsl_interpolation/"
repository = "https://github.com/George-Tsiamasiotis/rsl-interpolation.git"
description = "A re-write of GSL's Interpolation Routines in Rust."

[dependencies]
is_close = "0.1.3"
ndarray = "0.16.1"
ndarray-linalg = "0.17.0"
num = "0.4.3"
num-traits = "0.2.19"
thiserror = "2.0.12"

[dev-dependencies]
ndarray-linalg = { version = "0.17.0", features = ["openblas-system"] }
criterion = "0.7.0"

[features]
openblas-static = ["ndarray-linalg/openblas-static"]
openblas-system = ["ndarray-linalg/openblas-system"]

[lib] # Needed for Criterion to detect extra command line options
bench = false

[[bench]]
name = "evaluations"
harness = false

[[bench]]
name = "evaluations2d"
harness = false

[[bench]]
name = "dynamic"
harness = false
