[package]
name = "rsl-interpolation"
authors = ["George Tsiamasiotis"]
version = "0.1.16-pre.2"
edition = "2024"
keywords = ["math", "science", "interpolation"]
readme = "README.md"
license = "GPL-3.0-only"
documentation = "https://docs.rs/rsl-interpolation/latest/rsl_interpolation/"
repository = "https://github.com/George-Tsiamasiotis/rsl-interpolation.git"
description = "A re-write of GSL's Interpolation Routines in Rust."

[dependencies]
is_close = "0.1.3"
ndarray = "0.17.1"
ndarray-linalg = "0.18.0"
num = "0.4.3"
num-traits = "0.2.19"
thiserror = "2.0.17"

[dev-dependencies]
ndarray-linalg = { version = "0.18.0", features = ["openblas-system"] }
criterion = "0.7.0"

[features]
default = []
openblas-static = ["ndarray-linalg/openblas-static"]
openblas-system = ["ndarray-linalg/openblas-system"]

[lib] # Needed for Criterion to detect extra command line options
bench = false

[[bench]]
name = "evaluations"
harness = false

[[bench]]
name = "evaluations2d"
harness = false

[[bench]]
name = "dynamic"
harness = false

[[bench]]
name = "accelerator"
harness = false

[[bench]]
name = "cache"
harness = false

[[bin]]
name = "cache"
path = "src/bin/cache.rs"
